--- a/index.html
+++ b/index.html
@@ -66,7 +66,15 @@
                             <input type="text" class="form-control" id="diet" name="diet">
                             </td>
                             <!-- <td colspan="5"></td> -->
-                        </tr>                        
+                        </tr>       
+
+                        <tr>
+                            <td colspan="4">
+                                <center>
+                                <button type="button" class="btn">send</button>
+                                </center>
+                            </td>
+                        </tr>                 
                         
 
                     </tbody></table>
