--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <head>
 	<meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>2016 FGL Sports Holiday Party</title>
+        <title>2017 FGL Sports Holiday Party</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -32,11 +32,11 @@
 
     <div class="content">
 
-		<h1>2016 FGL Holiday Party</h1>
-		<h2>December 2, 2016 &nbsp;&nbsp;&nbsp;—&nbsp;&nbsp;&nbsp;&nbsp; 6:00pm – 1:00am  &nbsp;&nbsp;&nbsp;—&nbsp;&nbsp;&nbsp;&nbsp; BMO Centre</h5>
+		<h1>2017 FGL Holiday Party</h1>
+		<h2>December 1, 2017 &nbsp;&nbsp;&nbsp;—&nbsp;&nbsp;&nbsp;&nbsp; 6:00pm – 1:00am  &nbsp;&nbsp;&nbsp;—&nbsp;&nbsp;&nbsp;&nbsp; BMO Centre</h5>
 
 
-<!--
+
 	<form id="regform">
 	<table id="personal-table">
 		<tbody>
@@ -96,13 +96,13 @@
 
 	    </tbody></table>
 	    </form>
--->
 
 
-<center>
+
+<!-- <center>
 <h1>Registration is now Closed!</h1>
 </center>
-
+ -->
             </div>
 
         </div>
@@ -112,7 +112,7 @@
         <script src="/js/main.js"></script>
 		<script type="text/javascript" src="/js/jquery.backstretch.min.js"></script>
 		<script type="text/javascript">
-				  $.backstretch("/img/bg2.jpg");
+				  $.backstretch("/img/believewhateveryouwantto.jpg");
 				</script>
 				
     </body>
