added check reg status function

--- a/index.html
+++ b/index.html
@@ -112,6 +112,31 @@
 
         </div>
 
+        <div class="container" style="padding: 0px 20px 30px 20px;
+        margin-top: 30px;
+	    height: auto;
+	    width: 600px;
+	    color: #aaa;
+	    margin-bottom: 10px;
+	    border: 1px solid #477626;
+	    background: url(../img/000000-0.4.png) top left repeat;
+	    -webkit-box-shadow: 10px 10px 82px 36px rgba(255,255,255,1);
+	    -moz-box-shadow: 10px 10px 82px 36px rgba(255,255,255,1);
+	    box-shadow: 10px 10px 82px 36px rgba(255,255,255,1);">
+        <div class="content">
+        	<h2>Check your registration status</h2>
+        	<p style="color: #fff;text-align: center;">Enter your email address, and we will let you know if you have registered.</p>
+
+        	<form id="checkreg">
+        		<center>
+        			<label id="label-checkemail">Email</label>
+	        		<input type="text" name="checkemail" id="checkemail" class="form-control">
+	        		<input type="submit" name="checkregbutton" id="checkregbutton" value="Check">
+        		</center>
+        	</form>
+        </div>
+    	</div>
+
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
         <script src="/js/main.js"></script>
